--- a/generators/app/templates/flutter/flutter-app/lib/account/register/register_bloc.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/register/register_bloc.dart.ejs
@@ -4,9 +4,10 @@ import 'package:<%= baseName %>/shared/bloc/bloc.dart';
 import 'package:<%= baseName %>/shared/mixins/validators_mixin.dart';
 import 'package:<%= baseName %>/shared/models/user.dart';
 import 'package:<%= baseName %>/shared/repository/http_utils.dart';
-import 'package:rxdart/rxdart.dart';
+import 'package:<%= baseName %>/shared/repository/account_repository.dart';
 
-import 'account_repository.dart';
+
+import 'package:rxdart/rxdart.dart';
 
 class RegisterBloc extends Bloc with ValidatorMixin {
   final _login = BehaviorSubject<String>();
@@ -87,7 +88,7 @@ class RegisterBloc extends Bloc with ValidatorMixin {
     }
 
     if (validationOk) {
-      User newUser = new User(login, email, password, 'en');
+      User newUser = new User.forRegister(login, email, password, 'en');
       String result = await accountRepository.register(newUser);
       if (result.compareTo(HttpUtils.successResult) != 0) {
         _generalValidation.addError(result);
