--- a/generators/app/templates/flutter/flutter-app/lib/keys.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/keys.dart.ejs
@@ -4,4 +4,5 @@ class <%= camelizedUpperFirstBaseName %>Keys {
   static const loginScreen = Key('__loginScreen__');
   static const registerScreen = Key('__registerScreen__');
   static const mainScreen = Key('__mainScreen__');
+  static const settingsScreen = Key('__settingsScreen__');
 }
