--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -1,6 +1,6 @@
 {
   "pageLoginBar": "Se connecter",
-  "pageLoginTitle": "Bienvenue sur <%= baseName %>",
+  "pageLoginTitle": "Bienvenue sur votre app",
   "pageLoginLoginButton": "S'identifier",
   "pageLoginRegisterButton": "Créer un compte",
   "pageLoginErrorAuthentication": "Un problème est survenu, veuillez vérifier vos identifiants",
@@ -23,5 +23,14 @@
   "pageMainWelcome": "Bienvenue sur votre Jhipster flutter app",
   "drawerSettingsTitle": "Profil",
   "drawerLogoutTitle": "Deconnexion",
-  "drawerMenuTitle": "Menu"
+  "drawerMenuTitle": "Menu",
+  "pageSettingsTitle": "Paramètres",
+  "pageSettingsFormFirstname": "Prénom",
+  "pageSettingsFormLastname": "Nom",
+  "pageSettingsFormEmail": "Email",
+  "pageSettingsFormLanguage": "Langues",
+  "pageSettingsFormSave": "Enregistrer",
+  "pageSettingsSuccessSave": "Paramètres sauvegardés !",
+  "pageSettingsSuccessErrorBadRequest": "Mauvais format de données",
+  "pageSettingsSuccessErrorServer": "Problème de communication avec le serveur, merci de réessayer"
 }
