--- a/generators/app/templates/flutter/flutter-app/lib/routes.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/routes.dart.ejs
@@ -2,4 +2,5 @@ class <%= camelizedUpperFirstBaseName %>Routes {
   static final login = '/';
   static final register = '/register';
   static final main = '/main';
+  static final settings = '/settings';
 }
