--- a/generators/app/templates/flutter/flutter-app/lib/shared/mixins/validators_mixin.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/mixins/validators_mixin.dart.ejs
@@ -39,4 +39,14 @@ class ValidatorMixin {
           sink.addError('Please accept the terms and conditions');
         }
       });
+
+  final validateName = StreamTransformer<String, String>.fromHandlers(handleData: (name, sink) {
+        int max = 50;
+        if (name == null || (name != null && name.length <= 50)) {
+          sink.add(name);
+        } else {
+          sink.addError('The firstname has to be less than $max characters');
+        }
+  });
+
 }
