--- a/generators/app/templates/flutter/flutter-app/lib/environement.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/environement.dart.ejs
@@ -2,6 +2,9 @@ enum Environment { DEV, PROD }
 
 class Constants {
   static Map<String, dynamic> _config;
+  <%_ if (enableTranslation) { _%>
+  static final Map<String, String> languages = {'en':'English','fr':'Francais'};
+  <%_ } _%>
 
   static void setEnvironment(Environment env) {
     switch (env) {
