--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_en.arb.ejs
@@ -1,6 +1,6 @@
 {
   "pageLoginBar": "Login",
-  "pageLoginTitle": "Welcome to <%= baseName %>",
+  "pageLoginTitle": "Welcome to your app",
   "pageLoginLoginButton": "Sign in",
   "pageLoginRegisterButton": "Register",
   "pageLoginErrorAuthentication": "Problem when authenticate, verify your credential",
@@ -28,5 +28,14 @@
   "pageMainWelcome": "Welcome to your Jhipster flutter app",
   "drawerSettingsTitle": "Settings",
   "drawerLogoutTitle": "Sign out",
-  "drawerMenuTitle": "Menu"
+  "drawerMenuTitle": "Menu",
+  "pageSettingsTitle": "Settings",
+  "pageSettingsFormFirstname": "Firstname",
+  "pageSettingsFormLastname": "Lastname",
+  "pageSettingsFormEmail": "Email",
+  "pageSettingsFormLanguages": "Languages",
+  "pageSettingsFormSave": "Save",
+  "pageSettingsSuccessSave": "Settings saved !",
+  "pageSettingsSuccessErrorBadRequest": "Something wrong happended with the data",
+  "pageSettingsSuccessErrorServer": "Something wrong when calling the server, please try again"
 }
