--- a/generators/app/templates/flutter/flutter-app/lib/environement.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/environement.dart.ejs
@@ -4,6 +4,7 @@ class Constants {
   static Map<String, dynamic> _config;
   <%_ if (enableTranslation) { _%>
   static final Map<String, String> languages = {'en':'English','fr':'Francais'};
+  static final String langStorageKey = 'locale';
   <%_ } _%>
 
   static void setEnvironment(Environment env) {
