--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -5,7 +5,7 @@
   "pageLoginRegisterButton": "Créer un compte",
   "pageLoginErrorAuthentication": "Un problème est survenu, veuillez vérifier vos identifiants",
   "pageRegisterTitle": "Créer un compte",
-  "pageRegisterFormLogin": "Login",
+  "pageRegisterFormLogin": "Identifiant",
   "pageRegisterFormEmail": "Email",
   "pageRegisterFormEmailHint": "you@exemple.com",
   "pageRegisterFormPassword": "Mot de passe",
@@ -20,6 +20,7 @@
   "pageRegisterSuccess": "Félicitation",
   "pageRegisterSuccessSub": "Votre compte a été créé avec succés",
   "pageMainTitle": "Page principale",
+  "pageMainCurrentUser": "Utilisateur connecté : {login}",
   "pageMainWelcome": "Bienvenue sur votre Jhipster flutter app",
   "drawerSettingsTitle": "Profil",
   "drawerLogoutTitle": "Deconnexion",
