--- a/generators/app/templates/flutter/flutter-app/lib/main/main_bloc.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main/main_bloc.dart.ejs
@@ -1,19 +1,66 @@
 import 'dart:async';
 
+import 'package:flutter/widgets.dart';
+import 'package:flutter_secure_storage/flutter_secure_storage.dart';
+import 'package:<%= baseName %>/environement.dart';
+import 'package:<%= baseName %>/generated/l10n.dart';
 import 'package:<%= baseName %>/shared/bloc/bloc.dart';
+import 'package:<%= baseName %>/shared/models/user.dart';
+import 'package:<%= baseName %>/shared/repository/account_repository.dart';
 import 'package:rxdart/rxdart.dart';
 
 class MainBloc extends Bloc {
-  final _example = BehaviorSubject<int>();
+  final _user = BehaviorSubject<User>();
 
-  Stream<int> get _exampleStream => _example.stream;
-
-  Function(int) get changeExample => _example.sink.add;
-
+  Stream<User> get userStream => _user.stream;
+  
+  final accountRepository = AccountRepository();
+  
+  User currentUser;
+  
   MainBloc();
+  
+  Future<User> fetchConnectedUser() async {
+    if(currentUser == null) {
+      currentUser = await accountRepository.getIdentity();
+      _user.sink.add(currentUser);
+    }
+    return currentUser;
+  }
+
+  <%_ if (enableTranslation) { _%>
+  Future<bool> init(String languageCode) async {
+    await fetchConnectedUser();
+    return await changeLanguage(languageCode);
+  }
+  <%_ } else { _%>
+  void init() async {
+    await fetchConnectedUser();
+  }
+  <%_ } _%>
+  
+  <%_ if (enableTranslation) { _%>
+  Future<bool> changeLanguage(String languageCode) async {
+    bool reload = false;
+    FlutterSecureStorage storage = new FlutterSecureStorage();
+    var locale = await storage.read(key: Constants.langStorageKey);
+    if(locale != null) {
+      if(currentUser.langKey.compareTo(locale) != 0) {
+        S.load(Locale(currentUser.langKey));
+        await storage.write(key: Constants.langStorageKey, value: currentUser.langKey);
+        reload = true;
+      }
+    } else {
+      await storage.write(key: Constants.langStorageKey, value: languageCode);
+      S.load(Locale(currentUser.langKey));
+      reload = true;
+    }
+    return reload;
+  }
+  <%_ } _%>
 
   @override
   void dispose() => () {
-    _example.close();
+    _user.close();
   };
 }
