--- a/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
+++ b/generators/app/templates/flutter/flutter-app/pubspec.yaml.ejs
@@ -24,23 +24,19 @@ dependencies:
     sdk: flutter
 <%_ } _%>
   cupertino_icons: 0.1.3
-  provider: 4.0.4
+  provider: 4.1.3+1
   collection: 1.14.12
-  http: 0.12.0+4
-  dart_json_mapper: 1.5.9
+  http: 0.12.1
+  dart_json_mapper: 1.5.16
   dart_json_mapper_flutter: 1.0.0
-  rxdart: 0.23.1
-  flutter_secure_storage: 3.3.2
-  url_launcher: 5.4.5
+  rxdart: 0.24.1
+  flutter_secure_storage: 3.3.3
+  url_launcher: 5.4.11
 
-<%_ if (enableTranslation) { _%>
-dependency_overrides:
-  intl: 0.16.1
-<%_ } _%>
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.8.0
+  build_runner: 1.10.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
