Fix language detection and reload

--- a/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/l10n/intl_fr.arb.ejs
@@ -1,4 +1,5 @@
 {
+  "locale": "fr" ,
   "pageLoginBar": "Se connecter",
   "pageLoginTitle": "Bienvenue sur votre app",
   "pageLoginLoginButton": "S'identifier",
